--- a/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/Areas/Identity/Pages/Account/Logout.cshtml
@@ -6,7 +6,7 @@
 
 <header>
     @{
-        if (User.Identity.IsAuthenticated)
+        if (User.Identity!.IsAuthenticated)
         {
             <div class="row justify-content-center">
             <div class="col-md-6 align-items-center">
